--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -12,6 +12,8 @@ $ridestyler-color-gray: #7A8798;
 $ridestyler-color-orange: #F3693C;
 $ridestyler-color-red: #E72320;
 $ridestyler-color-blue: #21B8F7;
+$ridestyler-color-navy: #1b1f38;
+$ridestyler-color-dark-navy: #0d112b;
 
 // RideStyler Logos
 $ridestyler-logo-text: 'https://static.ridestyler.com/temp/logos/ridestyler-logo-TEXT.svg' !default;
